--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,28 @@
 .App {
   text-align: center;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 .App-header {
-  background-color: #222;
-  height: 80px;
-  padding: 20px;
+  flex: 1;
+  background-color: #212;
+  height: 40px;
+  padding-top: 20px;
   color: white;
-  width: 100%;;
+}
+
+.GameView {
+  flex: 1;
+  overflow: scroll;
+  padding-bottom: 10px;
 }
 
 .App-footer {
-  position:absolute;
+  flex: 1;
   bottom:0;
-  width:100%;
   background-color: #212;
-  height: 80px;
-  padding: 20px;
+  height: 40px;
   color: white;
-}
-
-.App-intro {
-  font-size: large;
 }
